# Pythonic-DISORT

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE.md  PyDISORT.py  PyDISORT_optional_dependencies.txt  Pythonic DISORT.ipynb  Pythonic-DISORT.ipynb  Pythonic-DISORT_optional_dependencies.txt  PythonicDISORT_optional_dependencies.txt  README.md  all_optional_dependencies.txt  basic_solver.py  conf.py  docs_dependencies.txt  index.rst  optional_dependencies.txt  pyproject.toml  requirements.txt  setup.py  subroutines.py
.github/workflows/: Continuous_Distribution.yml  continuous_distribution.yml  continuous_integration.yml  draft-pdf.yml  python-package.yml
.ipynb_checkpoints/: Pythonic DISORT 2-checkpoint.ipynb  Pythonic DISORT-checkpoint.ipynb  Pythonic DISORT_old-checkpoint.ipynb
PyDISORT/: README.md  __init__.py  _basic_solver.py  _loop_and_assemble_results.py  _one_Fourier_mode.py  basic_solver.py  pydisort.py  pyproject.toml  requirements.txt  subroutines.py
PyTests/: 11_test.py  1_test.py  1a_test.ipynb  1b_test.ipynb  1c_test.ipynb  1d_test.ipynb  2_test.py  2a_test.ipynb  2b_test.ipynb  2c_test.ipynb  2d_test.ipynb  3_test.py  3a_test.ipynb  3b_test.ipynb  5BDRF_test.ipynb  5a_test.ipynb  8_test.py  8a_test.ipynb  9b_test.ipynb
PyTests/Stamnes_results/: 1d_test.npz  2d_test.npz  3b_test.npz  8a_test.npz
PyTests/results/: 1a_test.npz  1b_test.npz  1c_test.npz  1d_test.npz  2a_test.npz  2b_test.npz  2c_test.npz  2d_test.npz  3a_test.npz  3b_test.npz
disort4.0.99_f2py/: DISOBRDF.f  DISORT.f  Makefile  f2py_README.md
disort4.0.99_f2py/doc/: DISORT.txt
docs/: Pythonic-DISORT.ipynb  conf.py  docs_dependencies.txt  index.rst  license.md  requirements.txt  section6_testresults.npz  section6_testresults1.npz  section6_testresults2.npz
docs/JOSS Paper/: JOSS_PythonicDISORT.md  PythonicDISORT.bib
docs/JOSS_Paper/: JOSS_PythonicDISORT.md  paper.bib  paper.md  sample.md
docs/source/: PyDISORT.rst  PythonicDISORT.rst
pydisotest/: 11_test.py  14a_NoInternalSources_test.ipynb  1_test.ipynb  1_test.py  1a_test.ipynb  1b_test.ipynb  1c_test.ipynb  1d_test.ipynb  1e_test.ipynb  1f_test.ipynb  2_test.ipynb  2_test.py  2a_test.ipynb  2b_test.ipynb  2c_test.ipynb  2d_test.ipynb  3_test.ipynb  3_test.py  3a_test.ipynb  3b_test.ipynb  4_test.ipynb  4_test.py  4a_test.ipynb  4b_test.ipynb  4c_test.ipynb  5BDRF_test.ipynb  5_test.ipynb  5_test.py  5a_test.ipynb  5b_test.ipynb  6_test.ipynb  6_test.py  7_test.ipynb  7_test.py  8_test.ipynb  8_test.py  8a_test.ipynb  8b_test.ipynb  8c_test.ipynb  9_test.ipynb  (+5 more)
pydisotest/ARTS_data/: inpydis.py  pydisort_data.py
pydisotest/Stamnes_results/: 1a_test.npz  1b_test.npz  1c_test.npz  1d_test.npz  1e_test.npz  1f_test.npz  2a_test.npz  2b_test.npz  2c_test.npz  2d_test.npz  3a_test.npz  3b_test.npz  3multilayer_test.npz  4a_test.npz  4b_test.npz  4c_test.npz  5BDRF_test.npz  5a_test.npz  5b_test.npz  6b_test.npz  6c_test.npz  6d_test.npz  6e_test.npz  6f_test.npz  6g_test.npz  6h_test.npz  7a_test.npz  7b_test.npz  7c_test.npz  7d_test.npz  7e_test.npz  8ARTS_A_test.npy  8ARTS_B0_test.npz  8ARTS_B1_test.npz  8ARTS_B2_test.npz  8a_test.npz  8b_test.npz  8c_test.npz  9a_test.npz  9b_test.npz  (+2 more)
source/: modules.rst
src/PyDISORT/: __init__.py  _loop_and_assemble_results.py  pydisort.py  subroutines.py
src/Pythonic-DISORT/: __init__.py  _loop_and_assemble_results.py  _one_Fourier_mode.py  pydisort.py
src/PythonicDISORT/: __init__.py  _assemble_intensity_and_fluxes.py  _assemble_results.py  _assemble_solution_functions.py  _diagonalize.py  _loop_and_assemble_results.py  _one_Fourier_mode.py  _solve_for_coeffs.py  _solve_for_coefs.py  _solve_for_gen_and_part_sols.py  pydisort.py  subroutines.py
