[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "numpy>=1.8.0",
  "scipy>=1.8.0",
]
name = "PythonicDISORT"
version = "1.2"
authors = [
  { name="Dion HO Jia Xu", email="dh3065@columbia.edu" },
]
description = "Discrete Ordinates Solver for the (1D) Radiative Transfer Equation in a single or multi-layer atmosphere."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
pytest = ["pytest >= 6.2.5"]
notebook_dependencies = [
	"autograd>=1.5",
	"jupyter>1.0.0",
	"notebook>6.5.2",
]

[project.urls]
"Homepage" = "https://github.com/LDEO-CREW/Pythonic-DISORT"